--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "db:populate": "node seed.js"
   },
   "keywords": [],
   "author": "",
