--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "bootstrap": "^5.3.7",
     "chartjs": "^0.3.24",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
